--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".MainActivity"
-
-
-            >
-
-
-
+        <activity android:name=".MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
